src/objects/Campaign_Member_History__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Histories</relationshipLabel>
        <relationshipName>Campaign_Member_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Member Histories</relationshipLabel>
        <relationshipName>Campaign_Member_Histories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Removed__c</fullName>
        <label>Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Added__c</fullName>
        <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Added</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Member History</label>
    <nameField>
        <displayFormat>H-{00000000}</displayFormat>
        <label>Campaign Member History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>